--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ a:hover {
 .login_signup{
     background-image: url(../img/bg.jpg);
     padding: 5% 0;
+    height: 100%;
     background-size: cover;}
 .login {
     background-color: rgba(190, 190, 190, .9) ;
