--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,61 @@
-.h-8{
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.h-8 {
     height: 8rem;
 }
-.h-5{height: 5rem;}
+
+.h-5 {
+    height: 5rem;
+}
+
 a {
     text-decoration: none !important;
 }
+
 a:hover {
     color: #000;
 }
-.login_signup{
+
+.login_signup {
     background-image: url(../img/bg.jpg);
     padding: 5% 0;
-    height: 100%;
-    background-size: cover;}
+    height: 100vh;
+    background-size: cover;
+}
+
 .login {
-    background-color: rgba(190, 190, 190, .9) ;
+    background-color: rgba(190, 190, 190, .9);
     padding-bottom: 1%;
     border-radius: 20%;
     width: 28rem;
-    margin:auto;
+    margin: auto;
 }
-.login h1{
+
+.login h1 {
     font: 60px/64px Colonna MT;
     color: #fff;
-    padding-top: 9%;
+    padding-top: 6%;
 }
-.login .up{
+
+.login .up {
     font: normal normal normal 35px/38px Berlin Sans FB;
-letter-spacing: 0px;
-color: #00000099;
+    letter-spacing: 0px;
+    color: #00000099;
 }
+
 .login .login-form {
     border: none;
-background-color: transparent;
-height: 100%;
+    background-color: transparent;
+    height: 100%;
 }
+
 .login .login-form input {
     display: block;
     opacity: .4;
-    margin-bottom: 10%;
+    margin-bottom: 7%;
     border-radius: 20px;
     padding: 3% 0px;
     text-align: center;
@@ -63,191 +80,100 @@ height: 100%;
     font-size: 22px;
     text-decoration: none;
 }
-.log{
-    margin-top: 10%;
 
-}
-.orders-page-client .page-content{
+.orders-page-client .page-content {
     padding-bottom: 80px;
 }
 
-.orders-page-client .page-content .navigation .nav-pills{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ec3454;
-    margin-bottom: 60px !important;
-}
-
-.orders-page-client .page-content .navigation .nav-pills .nav-item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.orders-page-client .page-content .navigation .nav-pills .nav-item .nav-link{
-    color: #FFF;
-    font-size: 45px;
-    font-weight: 600;
-    padding: 40px 50px;
-    border-radius: 0;
-    width: fit-content;
-}
-
-.orders-page-client .page-content .navigation .nav-pills .nav-item .nav-link.active{
-    border-bottom: 5px solid #000;
-    background: none;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card{
-    background-color: #ececec;
-    padding: 50px;
-    border-radius: 20px;
-    margin-bottom: 20px;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card:last-of-type,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card:last-of-type{
-    margin: 0;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .info,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card .info{
-    display: flex;
-    align-items: center;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .info .image,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card .info .image{
-    width: 250px;
-    height: 250px;
-    border-radius: 100%;
-    margin-left: 30px;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 3px solid #ec3454;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .info .details,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card .info .details{
-    margin-left: auto;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .info .details h2,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card .info .details h2{
-    font-weight: 600;
-    font-size: 35px;
-    margin-bottom: 20px;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .info .details ul,
-.orders-page-client .page-content .navigation .tab-content .tab-pane .previous-orders .previous-card .info .details ul{
-    margin: 0;
-    list-style: none;
-    line-height: 2;
-    font-size: 25px;
-    padding: 0;
-    color: #848484;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .options .receive{
-    background-color: #008d3d;
-}
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .options .refuse{
-    background-color: #ec3454;
-}
-
-
-.orders-page-client .page-content .navigation .tab-content .tab-pane .current-orders .current-card .options button{
-    width: 100%;
-    border: none;
-    border-radius: 100px;
-    padding: 15px 70px;
-    margin: 20px 0;
-    font-size: 25px;
-    color: #FFF;
-    box-shadow: 0px 3px 10px #bababa;
-    cursor: pointer;
-    display: block;
-}
-.nav-pills .nav-link.active{
+.nav-pills .nav-link.active {
     background-color: transparent;
     color: #E1B815;
     border-bottom: 3px solid #E1B815;
 }
-.w-25rem{
+
+.w-25rem {
     width: 25rem !important;
 }
-.main{
+
+.main {
     background: #fff7d9 0% 0% no-repeat padding-box;
 }
-.navigation .nav-item{
+
+.navigation .nav-item {
     margin: auto;
 }
-.login .up2{
+
+.login .up2 {
     font-size: 19px;
 }
-.navigation{
+
+.navigation {
     margin-inline: 10%;
-    margin-bottom: 15%;
+    margin-bottom: 5%;
 }
-.mt-9{
+
+.mt-9 {
     margin-top: 23%;
 }
-.navbar-collapse{
+
+.navbar-collapse {
     justify-content: center;
 }
-.nav{
+
+.nav {
     background: #E1B815CC 0% 0% no-repeat padding-box;
     padding: 1.2% 0;
 }
-.nav a{
+
+.nav a {
     text-align: left;
     letter-spacing: 0px;
     font-weight: 500;
     color: #fff;
 }
-.nav .navbar-brand{
+
+.nav .navbar-brand {
     font: normal normal normal 45px/47px Colonna MT;
-letter-spacing: 0px;
-color: #FFFFFF;
-padding-left: 5%;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    padding-left: 5%;
 }
-.language img{
+
+.language img {
     width: 25px;
 }
-.nav .girl{
+
+.nav .girl {
     width: 50px;
     border-radius: 50%;
     height: 50px;
     margin-left: 2%;
     margin-right: 3%;
 }
-.nav-search{
+
+.nav-search {
     background-color: #E3CD8099;
     padding: 1% 0;
 }
-.nav-search .nav .right-part{
+
+.nav-search .nav .right-part {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.nav-search .search-field{
+.nav-search .search-field {
     display: flex;
     justify-content: center;
 }
-.nav-search .navbar .right-part .search-field form{
+
+.nav-search .navbar .right-part .search-field form {
     display: flex;
     align-items: center;
     position: relative;
 }
 
-.nav-search .navbar .right-part .search-field form input{
+.nav-search .navbar .right-part .search-field form input {
     height: 40px;
     width: 339px;
     border: none;
@@ -256,7 +182,7 @@ padding-left: 5%;
     padding: 0 10px 0 50px;
 }
 
-.nav-search .navbar .right-part .search-field form button{
+.nav-search .navbar .right-part .search-field form button {
     background: none;
     border: none;
     padding: 0;
@@ -266,44 +192,55 @@ padding-left: 5%;
     cursor: pointer;
 
 }
-@media (max-width: 500px){
-    .nav-search .navbar .right-part{
+
+@media (max-width: 500px) {
+    .nav-search .navbar .right-part {
         margin-bottom: 30px;
     }
 }
-.justify-center{
+
+.justify-center {
     justify-content: center;
 }
-.fa-search{
+
+.fa-search {
     color: #0000007F;
 }
-.fa-shopping-cart , .fa-heart{
+
+.fa-shopping-cart,
+.fa-heart {
     position: relative;
     left: 28%;
     font-size: 32px;
     text-align: center;
-    color: #0000007F ;
+    color: #0000007F;
 }
-.img-bg{
-    background-image: url(../img/bg.jpg);
-    background-size: cover;
-    height: 100vh;
+
+.img-bg {
+    /* background-image: url(../img/bg.jpg);
+    background-size: cover; */
+    /* height: 100vh; */
     border-radius: 0px 0px 150px 150px;
 }
-.group_img img{
+
+.group_img img {
     border-radius: 50%;
     height: 80px;
     width: 80px;
 }
-.group_img .col-md{
+
+.group_img .col-md {
     text-align: center;
 }
-.group_img h3{
+
+.group_img h3 {
     font-size: 15px;
 }
-section{
+
+section {
     margin-top: 5%;
 }
+
 .gal-item img {
     border-radius: 20%;
     -webkit-transition: .3s all ease-in-out;
@@ -312,15 +249,18 @@ section{
     margin-bottom: 20%;
     box-shadow: 7px 10px 15px #00000059;
 }
-.best span{
+
+.best span {
     font-weight: 700;
     text-align: left;
 }
-.best .line-through{
+
+.best .line-through {
     text-decoration: line-through;
     color: #00000099;
 }
-.best .float-right span{
+
+.best .float-right span {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -328,14 +268,21 @@ section{
     right: 20%;
     z-index: 2;
 }
-.best .float-right i.activei , .best .float-right .fa-shopping-cart:hover,  .best .float-right .fa-heart:hover{
+
+.best .float-right i.activei,
+.best .float-right .fa-shopping-cart:hover,
+.best .float-right .fa-heart:hover {
     color: #E1B815CC;
     transition: all .4s ease-in-out;
 }
-.best .discover , .arr .discover {
+
+.best .discover,
+.arr .discover {
     margin-top: 5%;
 }
-.best .discover a ,.arr .discover a{
+
+.best .discover a,
+.arr .discover a {
     background-color: #E1B815CC;
     padding: 2% 4%;
     border-radius: 50px;
@@ -343,193 +290,279 @@ section{
     color: #fff;
     font-weight: 200;
 }
-.best h2{
+
+.best h2 {
     margin-bottom: 5%;
 }
-.arr .two, .arr .one, .arr .three, .arr .four, .arr .five, .arr .six, .arr .seven{
-border-radius: 20px;
-box-shadow: 15px 15px 15px #00000059;
-margin-right: 2%;
+
+@media (min-width: 992px) {
+
+    .arr .two img,
+    .arr .one img,
+    .arr .three img,
+    .arr .five img,
+    .arr .six img,
+    .arr .seven img {
+        height: 20rem;
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr) !important;
+        grid-column-gap: 2%;
+        grid-row-gap: 2%;
+    }
+
+    .grid .four {
+        grid-row: 1/3;
+    }
+
 }
-.arr .one{
-    background: url(../img/arr/9.png)  0% 0% no-repeat padding-box;
-    width: 210px;
-height: 250px;;
+
+/* min-width: 768px */
+@media (max-width: 992px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 2%;
+        grid-row-gap: 2%;
+    }
+
+    .grid .four {
+        grid-row: 1/5;
+    }
+
+    .arr .two img,
+    .arr .one img,
+    .arr .three img,
+    .arr .five img,
+    .arr .six img,
+    .arr .seven img {
+        height: 13rem;
+        width: 15rem;
+    }
 }
-.arr .two{
-    background: url(../img/arr/8.png)  0% 0% no-repeat padding-box;
-    width: 415px;
-    height: 250px;
-    margin-right: 2%;
+
+/* min-width: 576px */
+@media (max-width: 768px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 2%;
+        grid-row-gap: 2%;
+    }
+
+    .grid .four {
+        grid-row: 1/5;
+    }
+
+    .arr .two img,
+    .arr .one img,
+    .arr .three img,
+    .arr .five img,
+    .arr .six img,
+    .arr .seven img {
+        height: 13rem;
+        width: 15rem;
+    }
 }
-.arr .three{
-    background: url(../img/arr/7.png)  0% 0% no-repeat padding-box;
-    width: 207px;
-    height: 250px;
-}
-.arr .four{
-    background: url(../img/arr/6.png)  0% 0% no-repeat padding-box;
-    width: 205px;
-    height: 630px;
-}
-.arr .five{
-    background: url(../img/arr/5.png)  0% 0% no-repeat padding-box;
-    width: 208px;
-    height: 250px;
-    
-}
-.arr .six{
-    background: url(../img/arr/7.png)  0% 0% no-repeat padding-box;
-    width: 210px;
-    height: 250px;
-}
-.arr .seven{
-    background: url(../img/arr/4.png)  0% 0% no-repeat padding-box;
-    width: 417px;
-    height: 250px;
-}
+
 .arr .discover {
     margin-top: 8%;
 }
-.site-section h2{
+
+.site-section h2 {
     font: normal normal normal 45px/49px Berlin Sans FB;
     margin-bottom: 10%;
 }
-.gallary{
+
+.gallary {
     margin-bottom: 15%;
 }
-.gallary h2{
+
+.gallary h2 {
     margin-bottom: 13%;
     margin-top: 7%;
 }
-.carousel-item{
+
+.carousel-item {
     border-radius: 60px;
 }
-.slide .carousel-indicators li.active{
-    background-color: #7B786E ;
+
+.slide .carousel-indicators li.active {
+    background-color: #7B786E;
 }
-.slide .carousel-indicators li{
-    background-color: #E1B815CC ;
+
+.slide .carousel-indicators li {
+    background-color: #E1B815CC;
     border-radius: 100%;
     height: 10px;
     width: 13px;
     margin: 5px;
     opacity: 1;
 }
-.carousel-indicators{
+
+.carousel-indicators {
     position: absolute;
     bottom: -4rem;
 }
-.fav .h2{
+
+.fav .h2 {
     margin-bottom: 15%;
 }
-.fav img{
+
+.fav img {
     border-radius: 40px;
     margin-top: 2rem;
     width: 100%;
 }
-.fav img.down1{
+
+.fav img.down1 {
     margin-top: 12%;
     border-radius: 50%;
 }
-.fav img.h-5{
+
+.fav img.h-5 {
     margin-top: 12%;
 }
-.fav{
+
+.fav {
     padding-bottom: 3%;
 }
-.why .site-section h2{
+
+.why .site-section h2 {
     margin-bottom: 15%;
 }
-.why .col-lg-3{
+
+.why .col-lg-3 {
     background: #46AB2DCC 0% 0% no-repeat padding-box;
-box-shadow: 10px 10px 50px #000000B3;
-display: flex;
-justify-content: center;
-padding: 6.2% 0;
+    box-shadow: 10px 10px 50px #000000B3;
+    display: flex;
+    justify-content: center;
+    padding: 6.2% 0;
     border-radius: 60px;
     margin-right: 3%;
     height: 20rem;
 }
-.why .col-lg-3 p{
+
+.why .col-lg-3 p {
     text-align: center;
-font: normal normal normal 31px/25px Arial;
-letter-spacing: 0px;
-color: #FFFFFF;
-line-height: 2;
+    font-size: 1.5rem;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    line-height: 2;
+    align-items: center;
+    display: grid;
 }
-@media (min-width: 992px){
-.why .col-lg-3 {
-    max-width: 22% !important;
+
+@media (min-width: 992px) {
+    .why .col-lg-3 {
+        max-width: 22% !important;
+    }
 }
-}
-.p-2rem{
+
+/* @media (min-width: 1200){
+        .arr .five , .arr .six , .arr .seven{
+            position: relative !important;
+            bottom: 20rem !important;
+        }
+        } */
+.p-2rem {
     line-height: 3 !important;
 }
-@media (min-width: 768px){
+
+@media (min-width: 768px) {
     .col-md-6 {
         max-width: 47%;
     }
 }
-.footer{
+
+.footer {
     background-color: #E1B815B3;
     box-shadow: 0px -30px 70px #00000029;
-border-radius: 150px 150px 0px 0px;
-margin-top: 13%;
-padding-top: 5%;
-color: #423915;
-padding-bottom: 5%;
+    border-radius: 150px 150px 0px 0px;
+    margin-top: 13%;
+    padding-top: 4%;
+    color: #423915;
+    padding-bottom: 4%;
 }
-.footer .site-section h2{
+
+.footer .site-section h2 {
     font: normal normal normal 70px/74px Colonna MT;
 }
-.footer h4{
+
+.footer h4 {
     display: inline;
     margin-left: 5%;
     font-size: 30px;
     margin-bottom: 3%;
 }
-.footer .col-md-4{
+
+.footer .col-md-4 {
     text-align: center;
 }
-.footer .links{
+
+.footer .links {
     margin-top: 8%;
 }
-.footer .col-md-4 .links a{
+
+.footer .col-md-4 .links a {
     font: normal normal normal 22px/24px Berlin Sans FB;
-letter-spacing: 0px;
-color: #000000CC;
-display: block;
-margin-bottom: 5%;
+    letter-spacing: 0px;
+    color: #000000CC;
+    display: block;
+    margin-bottom: 5%;
 }
-.footer a{
+
+.footer a {
     color: inherit;
     font: normal normal normal 28px/43px Andalus;
     margin-top: 5%;
 }
-a:hover{
+
+a:hover {
     text-decoration: none;
 }
-.footer .social{
+
+.footer .social {
     display: flex;
     justify-content: center;
 }
-.footer .social .col-lg-12{
+
+.footer .social .col-lg-12 {
     display: flex;
     justify-content: center;
 }
-.footer .social img{
+
+.footer .social img {
     border-radius: 50%;
     width: 50px;
     height: 50px;
     display: block;
     margin-top: 5%;
 }
-.footer .phone{
+
+.footer .phone {
     margin-bottom: 5%;
 }
-input:active{
+
+input:active {
     border: none;
-}input:focus{
+}
+
+input:focus {
     border: none;
+}
+
+.footer .site-section h2 {
+    margin-bottom: 5%;
+}
+
+.shopping {
+    position: relative;
+    left: 28%;
+}
+
+.account {
+    margin: 0 2%;
 }
