--- a/css/style.css
+++ b/css/style.css
@@ -10,106 +10,124 @@ img {
 .h-5 {
     height: 5rem;
 }
-
-a {
-    text-decoration: none !important;
-}
-
-a:hover {
-    color: #000;
-}
-
-.login_signup {
+main {
     background-image: url(../img/bg.jpg);
     padding: 5% 0;
-    height: 100vh;
-    background-size: cover;
+   height: 100vh;
+   background-size: cover;
+    font-family: 'Titillium Web', sans-serif;
 }
-
-.login {
-    background-color: rgba(190, 190, 190, .9);
-    padding-bottom: 1%;
+.form {
+    background: rgba(200, 200, 200, 1);
     border-radius: 20%;
-    width: 28rem;
-    margin: auto;
+   width: 28rem;
+   margin:auto;
+    box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);
+    height: auto;
 }
-
-.login h1 {
-    font: 60px/64px Colonna MT;
-    color: #fff;
-    padding-top: 6%;
+.form h1{
+   font: 60px/64px Colonna MT;
+   color: #fff;
+   padding-top: 10%;
+   padding-bottom: 2%;
+   text-align: center;
 }
-
-.login .up {
-    font: normal normal normal 35px/38px Berlin Sans FB;
-    letter-spacing: 0px;
-    color: #00000099;
+.tab-content{
+    padding-bottom: 6%;
 }
-
-.login .login-form {
-    border: none;
-    background-color: transparent;
-    height: 100%;
+.tab-group {
+    list-style: none;
+    padding: 0;
+    margin:auto;
+   margin-inline: 20%;
+   margin-bottom: 6%;
 }
-
-.login .login-form input {
+.tab-group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.tab-group li a {
     display: block;
-    opacity: .4;
-    margin-bottom: 7%;
-    border-radius: 20px;
-    padding: 3% 0px;
-    text-align: center;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: none;
-}
-
-.login .input-group-text {
-    background-color: transparent;
-    cursor: pointer;
-    border: none;
-}
-
-.login .input-group {
-    margin-bottom: 2rem;
-}
-
-.login a {
-    color: #000;
-    width: 100%;
-    font-weight: 500;
-    font-size: 22px;
     text-decoration: none;
+    padding: 15px;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 600;
+    float: left;
+    width: 50%;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s ease;
 }
-
-.orders-page-client .page-content {
-    padding-bottom: 80px;
+.tab-group li a:hover {
+    background: #E1B815;
+    color: #fff;
 }
-
-.nav-pills .nav-link.active {
-    background-color: transparent;
-    color: #E1B815;
-    border-bottom: 3px solid #E1B815;
+.tab-group .active a {
+   background-color: transparent;
+   color: #E1B815;
+   border-bottom: 3px solid #E1B815;
+   }
+.tab-content > div:last-child {
+    display: none;
 }
-
-.w-25rem {
-    width: 25rem !important;
+.field-wrap input {
+   display: block !important;
+   opacity: .4  !important;
+   margin-bottom: 7%  !important;
+   border-radius: 20px !important;
+   padding: 3% 0px !important;
+   text-align: center  !important;
+   background: #FFFFFF 0% 0% no-repeat padding-box;
+   border: none  !important;
+   transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
-
-.main {
-    background: #fff7d9 0% 0% no-repeat padding-box;
+.field-wrap input:focus, textarea:focus {
+    outline: 0;
+    border-color: #E1B815;
 }
-
-.navigation .nav-item {
-    margin: auto;
+.top-row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
-
-.login .up2 {
-    font-size: 19px;
+.top-row > div {
+    float: left;
+    width: 48%;
+    margin-right: 4%;
 }
-
-.navigation {
-    margin-inline: 10%;
-    margin-bottom: 5%;
+.top-row > div:last-child {
+    margin: 0;
+}
+.field-wrap{
+   text-align: center;
+   padding:  0 10%;
+}
+.button-block {
+   font: normal normal normal 35px/38px Berlin Sans FB;
+   letter-spacing: 0px;
+   color: #00000099;
+   display: block;
+   text-align: center;
+   }
+   a:hover{
+       text-decoration: none;
+       color: #E1B815;
+   }
+.up{
+   font: normal normal normal 35px/38px Berlin Sans FB;
+   letter-spacing: 0px;
+   color: #00000099;
+   font-size: 19px;
+   display: block;
+   margin-top: 6%;
+   text-align: center; }
+ li{
+    list-style: none;
+}
+.log{
+    margin-bottom: 0 0 5% 0;
 }
 
 .mt-9 {
@@ -118,6 +136,15 @@ a:hover {
 
 .navbar-collapse {
     justify-content: center;
+}
+.navigation .nav-item {
+    margin: auto;
+}
+
+
+.navigation {
+    margin-inline: 10%;
+    margin-bottom: 5%;
 }
 
 .nav {
@@ -216,10 +243,7 @@ a:hover {
     color: #0000007F;
 }
 
-.img-bg {
-    /* background-image: url(../img/bg.jpg);
-    background-size: cover; */
-    /* height: 100vh; */
+.img-bg img {
     border-radius: 0px 0px 150px 150px;
 }
 
