--- a/css/style.css
+++ b/css/style.css
@@ -10,45 +10,53 @@ img {
 .h-5 {
     height: 5rem;
 }
-.loginpage{
+
+.loginpage {
     background-image: url(../img/bg.jpg);
     background-size: cover;
 }
+
 main {
     padding: 5% 0;
-   height: 100vh;
+    height: 100vh;
     font-family: 'Titillium Web', sans-serif;
 }
+
 .form {
     background: rgba(200, 200, 200, 1);
     border-radius: 20%;
-   width: 28rem;
-   margin:auto;
+    width: 28rem;
+    margin: auto;
     box-shadow: 0 4px 10px 4px rgba(19, 35, 47, .3);
     height: auto;
 }
-.form h1{
-   font: 60px/64px Colonna MT;
-   color: #fff;
-   padding-top: 10%;
-   padding-bottom: 2%;
-   text-align: center;
+
+.form h1 {
+    font: 60px/64px Colonna MT;
+    color: #fff;
+    padding-top: 10%;
+    padding-bottom: 2%;
+    text-align: center;
 }
-.tab-content{
+
+.tab-content {
     padding-bottom: 6%;
 }
+
 .tab-group {
     list-style: none;
     padding: 0;
-    margin:auto;
-   margin-inline: 20%;
-   margin-bottom: 6%;
+    margin: auto;
+    margin-inline: 20%;
+    margin-bottom: 6%;
 }
+
 .tab-group:after {
     content: "";
     display: table;
     clear: both;
 }
+
 .tab-group li a {
     display: block;
     text-decoration: none;
@@ -62,73 +70,89 @@ main {
     cursor: pointer;
     transition: 0.5s ease;
 }
+
 .tab-group li a:hover {
     background: #E1B815;
     color: #fff;
 }
+
 .tab-group .active a {
-   background-color: transparent;
-   color: #E1B815;
-   border-bottom: 3px solid #E1B815;
-   }
-.tab-content > div:last-child {
+    background-color: transparent;
+    color: #E1B815;
+    border-bottom: 3px solid #E1B815;
+}
+
+.tab-content>div:last-child {
     display: none;
 }
+
 .field-wrap input {
-   display: block !important;
-   opacity: .4  !important;
-   margin-bottom: 7%  !important;
-   border-radius: 20px !important;
-   padding: 3% 0px !important;
-   text-align: center  !important;
-   background: #FFFFFF 0% 0% no-repeat padding-box;
-   border: none  !important;
-   transition: border-color 0.25s ease, box-shadow 0.25s ease;
+    display: block !important;
+    opacity: .4 !important;
+    margin-bottom: 7% !important;
+    border-radius: 20px !important;
+    padding: 3% 0px !important;
+    text-align: center !important;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: none !important;
+    transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
-.field-wrap input:focus, textarea:focus {
+
+.field-wrap input:focus,
+textarea:focus {
     outline: 0;
     border-color: #E1B815;
 }
+
 .top-row:after {
     content: "";
     display: table;
     clear: both;
 }
-.top-row > div {
+
+.top-row>div {
     float: left;
     width: 48%;
     margin-right: 4%;
 }
-.top-row > div:last-child {
+
+.top-row>div:last-child {
     margin: 0;
 }
-.field-wrap{
-   text-align: center;
-   padding:  0 10%;
+
+.field-wrap {
+    text-align: center;
+    padding: 0 10%;
 }
+
 .button-block {
-   font: normal normal normal 35px/38px Berlin Sans FB;
-   letter-spacing: 0px;
-   color: #00000099;
-   display: block;
-   text-align: center;
-   }
-   a:hover{
-       text-decoration: none;
-       color: #E1B815;
-   }
-.up{
-   font: normal normal normal 35px/38px Berlin Sans FB;
-   letter-spacing: 0px;
-   color: #00000099;
-   font-size: 19px;
-   display: block;
-   margin-top: 6%;
-   text-align: center; }
- li{
+    font: normal normal normal 35px/38px Berlin Sans FB;
+    letter-spacing: 0px;
+    color: #00000099;
+    display: block;
+    text-align: center;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #E1B815;
+}
+
+.up {
+    font: normal normal normal 35px/38px Berlin Sans FB;
+    letter-spacing: 0px;
+    color: #00000099;
+    font-size: 19px;
+    display: block;
+    margin-top: 6%;
+    text-align: center;
+}
+
+li {
     list-style: none;
 }
-.log{
+
+.log {
     margin-bottom: 0 0 5% 0;
 }
 
@@ -139,6 +163,7 @@ main {
 .navbar-collapse {
     justify-content: center;
 }
+
 .navigation .nav-item {
     margin: auto;
 }
@@ -262,9 +287,11 @@ main {
 .group_img h3 {
     font-size: 15px;
 }
-
+.fav{
+    margin-top: 0;
+}
 section {
-    margin-top: 5%;
+    margin-top: 4%;
 }
 
 .gal-item img {
@@ -273,8 +300,7 @@ section {
     -o-transition: .3s all ease-in-out;
     transition: .3s all ease-in-out;
     margin-bottom: 20%;
-    box-shadow: 7px 10px 15px #00000059;
-}
+    box-shadow: 8px 8px 20px -9px black;}
 
 .best span {
     font-weight: 700;
@@ -403,16 +429,16 @@ section {
 }
 
 .gallary {
-    margin-bottom: 15%;
+    margin-bottom: 10%;
 }
 
 .gallary h2 {
-    margin-bottom: 13%;
-    margin-top: 7%;
+    margin-bottom: 2%;
+    margin-top: 5%;
 }
 
 .carousel-item {
-    border-radius: 60px;
+    border-radius: 20px;
 }
 
 .slide .carousel-indicators li.active {
@@ -428,9 +454,15 @@ section {
     opacity: 1;
 }
 
+.why{
+    margin: 0;
+}
 .carousel-indicators {
     position: absolute;
     bottom: -4rem;
+}
+.fav .site-section h2{
+    margin-bottom: 3%;
 }
 
 .fav .h2 {
@@ -442,12 +474,6 @@ section {
     margin-top: 2rem;
     width: 100%;
 }
-
-.fav img.down1 {
-    margin-top: 12%;
-    border-radius: 50%;
-}
-
 .fav img.h-5 {
     margin-top: 12%;
 }
@@ -457,16 +483,16 @@ section {
 }
 
 .why .site-section h2 {
-    margin-bottom: 15%;
+    margin-bottom: 5%;
 }
 
 .why .col-lg-3 {
     background: #46AB2DCC 0% 0% no-repeat padding-box;
-    box-shadow: 10px 10px 50px #000000B3;
+    box-shadow: 8px 8px 20px -9px black;
     display: flex;
     justify-content: center;
     padding: 6.2% 0;
-    border-radius: 60px;
+    border-radius: 20px;
     margin-right: 3%;
     height: 20rem;
 }
@@ -505,9 +531,9 @@ section {
 
 .footer {
     background-color: #E1B815B3;
-    box-shadow: 0px -30px 70px #00000029;
+    box-shadow: 8px 8px 20px -9px black;
     border-radius: 150px 150px 0px 0px;
-    margin-top: 13%;
+    margin-top: 5%;
     padding-top: 4%;
     color: #423915;
     padding-bottom: 4%;
@@ -543,7 +569,7 @@ section {
 .footer a {
     color: inherit;
     font: normal normal normal 28px/43px Andalus;
-    margin-top: 5%;
+    margin: 5% 0;
 }
 
 a:hover {
